--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -2,6 +2,12 @@
   text-align: center;
 }
 
+body {
+  background-color: #fdfaf6;
+  font-family: 'Patrick Hand', sans-serif;
+}
+
+
 h1 {
   color: rgb(85, 85, 77);
 }
